Refs #19331; Fixed chart editor layout issues with 'Data selection for chart' tab

--- a/eea/googlecharts/views/css/edit.css
+++ b/eea/googlecharts/views/css/edit.css
@@ -1998,6 +1998,6 @@ input[type=text].eea-googlechart-trendlines-config-value{
     font-size:24px;
 }
 
-.matrixChart_dialog.matrix_dlg {
+.googlecharts_columns_config.hideOverflow, .matrixChart_dialog.hideOverflow {
     overflow: hidden;
 }
